feat: updated result output to new format